[gd_scene load_steps=7 format=2]

[ext_resource path="res://Levels/LevelCore.tscn" type="PackedScene" id=1]
[ext_resource path="res://Items/Bulb/BulbBase.tscn" type="PackedScene" id=2]
[ext_resource path="res://Items/Bulb/Bulb.tscn" type="PackedScene" id=3]
[ext_resource path="res://Levels/Level2/Level2.gd" type="Script" id=4]
[ext_resource path="res://Levels/TileMap/ShipMap.tscn" type="PackedScene" id=5]
[ext_resource path="res://Items/AirLock/AirLock.tscn" type="PackedScene" id=7]

[node name="Level2" type="Node2D"]
script = ExtResource( 4 )

[node name="TileMap" parent="." instance=ExtResource( 5 )]
tile_data = PoolIntArray( 65535, 1, 0, 0, 1, 0, 1, 4, 0 )

[node name="AirLock" parent="." instance=ExtResource( 7 )]
position = Vector2( -510.147, 128.44 )

[node name="Starts" type="Node2D" parent="."]

[node name="Position2D" type="Position2D" parent="Starts"]
position = Vector2( 286.002, 128.512 )

[node name="BulbBase2" parent="." instance=ExtResource( 2 )]
position = Vector2( 281.405, 254.573 )
rotation = -3.14159

[node name="BulbBase" parent="." instance=ExtResource( 2 )]
position = Vector2( 281.231, 0.936012 )

[node name="Bulb" parent="." instance=ExtResource( 3 )]
position = Vector2( -18.8863, 145.684 )
linear_velocity = Vector2( -12, -40 )

[node name="Bulb2" parent="." instance=ExtResource( 3 )]
position = Vector2( 106.195, 336.994 )
rotation = -2.59262
linear_velocity = Vector2( -40.666, 30 )
angular_velocity = 2.0

[node name="LevelCore" parent="." instance=ExtResource( 1 )]
